# agentic-rag-pdf-qa

./: .env.example  .gitignore  DESIGN.md  README.md  REPORT.md  demo_output_fomc.md  demo_output_llama3.md  langgraph.json  main.py  pyproject.toml
eval/: questions_fomc.json  questions_llama3.json
scripts/: evaluate.py
src/: cli.py  config.py  log.py  registry.py  slug.py
src/agent/: graph.py  nodes.py  state.py  tools.py  triage.py  validation.py
src/agent/prompts/: __init__.py  evidence.txt  triage.txt  validation.txt
src/api/: main.py  routes.py
src/preprocessing/: chunker.py  pdf_loader.py
src/retrieval/: embedder.py  indexer.py  retriever.py
tests/: test_agent.py  test_api.py  test_preprocessing.py  test_registry.py  test_retrieval.py  test_tools.py
ui/: streamlit_app.py
