[project]
name = "agentic-rag-pdf-qa"
version = "0.1.0"
description = "Agentic information-extraction system: Q&A over multi-modal, long-context PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "chromadb>=1.5.9",
    "colorama>=0.4.6",
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
    "langsmith>=0.8.17",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40",
    "tiktoken>=0.13.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
